--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.1.1",
+    "@fontsource/roboto": "^5.1.1",
+    "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "next": "15.1.6",
